make changes to final workflow

--- a/hwk2-task2-salmon-CARDELLE.ipynb
+++ b/hwk2-task2-salmon-CARDELLE.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "[Text(0.5, 0, 'Region'), Text(0, 0.5, 'Catch')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -99,8 +99,10 @@
    ],
    "source": [
     "# FINAL CODE\n",
+    "\n",
     "# Import libraries\n",
     "import pandas as pd\n",
+    "\n",
     "# Import data\n",
     "catch_data = pd.read_csv('data/salmon_data.csv')\n",
     "\n",
@@ -122,8 +124,8 @@
     "                        .mean()\n",
     "                        .sort_values()\n",
     "                        .plot(kind='bar',\n",
-    "                            title='Average Salmon Catch by Region(1878-1997)',\n",
-    "                            xlabel=('Region')))\n",
+    "                            title='Average Salmon Catch by Region(1878-1997)'))\n",
+    "\n",
     "# Set axis labels\n",
     "ax.set(xlabel=\"Region\", ylabel=\"Catch\")"
    ]
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true,
     "tags": []
