complete parts 1-3 for task 3

--- a/hwk2-task3-aqi-CARDELLE.ipynb
+++ b/hwk2-task3-aqi-CARDELLE.ipynb
@@ -115,16 +115,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "\n",
+    "# Import libraries\n",
+    "import pandas as pd\n",
     "# Read in data\n",
-    "aqi_17 = ...\n",
-    "aqi_18 = ..."
+    "aqi_17 = pd.read_csv('https://aqs.epa.gov/aqsweb/airdata/daily_aqi_by_county_2017.zip')\n",
+    "aqi_18 = pd.read_csv('https://aqs.epa.gov/aqsweb/airdata/daily_aqi_by_county_2018.zip')"
    ]
   },
   {
@@ -142,27 +143,277 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State Name</th>\n",
+       "      <th>county Name</th>\n",
+       "      <th>State Code</th>\n",
+       "      <th>County Code</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>AQI</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Defining Parameter</th>\n",
+       "      <th>Defining Site</th>\n",
+       "      <th>Number of Sites Reporting</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>01-003-0010</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2017-01-04</td>\n",
+       "      <td>29</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>01-003-0010</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2017-01-10</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>01-003-0010</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2017-01-13</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>01-003-0010</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2017-01-16</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>01-003-0010</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  State Name county Name  State Code  County Code        Date  AQI Category  \\\n",
+       "0    Alabama     Baldwin           1            3  2017-01-01   28     Good   \n",
+       "1    Alabama     Baldwin           1            3  2017-01-04   29     Good   \n",
+       "2    Alabama     Baldwin           1            3  2017-01-10   25     Good   \n",
+       "3    Alabama     Baldwin           1            3  2017-01-13   40     Good   \n",
+       "4    Alabama     Baldwin           1            3  2017-01-16   22     Good   \n",
+       "\n",
+       "  Defining Parameter Defining Site  Number of Sites Reporting  \n",
+       "0              PM2.5   01-003-0010                          1  \n",
+       "1              PM2.5   01-003-0010                          1  \n",
+       "2              PM2.5   01-003-0010                          1  \n",
+       "3              PM2.5   01-003-0010                          1  \n",
+       "4              PM2.5   01-003-0010                          1  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# a.\n",
-    "aqi_17_head = ..."
+    "# Return first 5 rows of `aqi_17_head`\n",
+    "aqi_17_head = aqi_17.head()\n",
+    "aqi_17_head"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State Name</th>\n",
+       "      <th>county Name</th>\n",
+       "      <th>State Code</th>\n",
+       "      <th>County Code</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>AQI</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Defining Parameter</th>\n",
+       "      <th>Defining Site</th>\n",
+       "      <th>Number of Sites Reporting</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2018-01-02</td>\n",
+       "      <td>42</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>01-003-0010</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2018-01-05</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>01-003-0010</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2018-01-08</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>01-003-0010</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2018-01-11</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>01-003-0010</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2018-01-14</td>\n",
+       "      <td>33</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>01-003-0010</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  State Name county Name  State Code  County Code        Date  AQI Category  \\\n",
+       "0    Alabama     Baldwin           1            3  2018-01-02   42     Good   \n",
+       "1    Alabama     Baldwin           1            3  2018-01-05   45     Good   \n",
+       "2    Alabama     Baldwin           1            3  2018-01-08   20     Good   \n",
+       "3    Alabama     Baldwin           1            3  2018-01-11   25     Good   \n",
+       "4    Alabama     Baldwin           1            3  2018-01-14   33     Good   \n",
+       "\n",
+       "  Defining Parameter Defining Site  Number of Sites Reporting  \n",
+       "0              PM2.5   01-003-0010                          1  \n",
+       "1              PM2.5   01-003-0010                          1  \n",
+       "2              PM2.5   01-003-0010                          1  \n",
+       "3              PM2.5   01-003-0010                          1  \n",
+       "4              PM2.5   01-003-0010                          1  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# b.\n",
-    "aqi_18_head = ..."
+    "# Return first 5 rows of `aqi_18_head`\n",
+    "aqi_18_head = aqi_18.head()\n",
+    "aqi_18_head"
    ]
   },
   {
@@ -189,6 +440,49 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Alabama', 'Alaska', 'Arizona', 'Arkansas', 'California',\n",
+       "       'Colorado', 'Connecticut', 'Country Of Mexico', 'Delaware',\n",
+       "       'District Of Columbia', 'Florida', 'Georgia', 'Hawaii', 'Idaho',\n",
+       "       'Illinois', 'Indiana', 'Iowa', 'Kansas', 'Kentucky', 'Louisiana',\n",
+       "       'Maine', 'Maryland', 'Massachusetts', 'Michigan', 'Minnesota',\n",
+       "       'Mississippi', 'Missouri', 'Montana', 'Nebraska', 'Nevada',\n",
+       "       'New Hampshire', 'New Jersey', 'New Mexico', 'New York',\n",
+       "       'North Carolina', 'North Dakota', 'Ohio', 'Oklahoma', 'Oregon',\n",
+       "       'Pennsylvania', 'Puerto Rico', 'Rhode Island', 'South Carolina',\n",
+       "       'South Dakota', 'Tennessee', 'Texas', 'Utah', 'Vermont',\n",
+       "       'Virgin Islands', 'Virginia', 'Washington', 'West Virginia',\n",
+       "       'Wisconsin', 'Wyoming'], dtype=object)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find shape of dataframes\n",
+    "aqi_17.shape\n",
+    "aqi_18.shape\n",
+    "\n",
+    "# Find number of states\n",
+    "aqi_17['State Name'].nunique()\n",
+    "aqi_18['State Name'].nunique()\n",
+    "\n",
+    "# Find unique states\n",
+    "aqi_17['State Name'].unique()\n",
+    "aqi_18['State Name'].unique()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -209,6 +503,15 @@
     "editable": false
    },
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. First I found the size of each dataframe. `aqi_17` has 326801 rows and 10 colums and `aqi_18` has 327541 rows and 10 columns.\n",
+    "2. Next I looked at the number of unique `State Name` in each dataframe. Both had 54 states included\n",
+    "3. Since there are only 50 states I next looked at the unique names for each state in the dataframe. For both dataframes the 4 extras are `Country of Mexico`, `District of Columbia`, `Puerto Rico`, and `Virgin Islands`."
+   ]
   },
   {
    "cell_type": "markdown",
