make changes to final workflow

--- a/hwk2-task3-aqi-CARDELLE.ipynb
+++ b/hwk2-task3-aqi-CARDELLE.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "<AxesSubplot:title={'center':'Daily AQI vs. 5 Day Average in Santa Barbara County'}, xlabel='Date', ylabel='AQI'>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -105,11 +105,8 @@
     "                  .str.lower()\n",
     "                  .str.replace(' ','_')\n",
     "                )\n",
-    "# Create new variable with only Santa Barbara county info \n",
-    "aqi_sb = aqi[aqi['county_name'] == 'Santa Barbara']\n",
-    "\n",
-    "# Remove `state_name`, `county_name`, `state_code` and `county_code`\n",
-    "aqi_sb = aqi_sb.drop(['state_name', 'county_name', 'state_code', 'county_code'], axis=1)\n",
+    "# Create new variable with only Santa Barbara county info and remove unwanted columns\n",
+    "aqi_sb = aqi[aqi['county_name'] == 'Santa Barbara'].drop(['state_name', 'county_name', 'state_code', 'county_code'], axis=1)\n",
     "\n",
     "# Convert date column to pandas.datetime\n",
     "aqi_sb['date'] = pd.to_datetime(aqi_sb['date'])\n",
