--- a/hwk2-task3-aqi-CARDELLE.ipynb
+++ b/hwk2-task3-aqi-CARDELLE.ipynb
@@ -2,24 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'otter'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_1763676/2714181433.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Initialize Otter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0motter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mgrader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0motter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNotebook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"hwk2-task3-aqi.ipynb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'otter'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize Otter\n",
     "import otter\n",
@@ -64,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +61,7 @@
        "<AxesSubplot:title={'center':'Daily AQI vs. 5 Day Average in Santa Barbara County'}, xlabel='Date', ylabel='AQI'>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -117,10 +105,8 @@
     "# Add five day average aqi column\n",
     "aqi_sb['five_day_average'] = aqi_sb['aqi'].rolling('5D').mean()\n",
     "\n",
-    "# Reset index and make a plot of daily aqi vs five day average\n",
-    "aqi_sb.reset_index(inplace = True)\n",
-    "aqi_sb.plot(x='date', \n",
-    "        y=['aqi', 'five_day_average'],\n",
+    "# Make a line plot\n",
+    "aqi_sb.plot(y=['aqi', 'five_day_average'],\n",
     "        title = 'Daily AQI vs. 5 Day Average in Santa Barbara County',\n",
     "        xlabel='Date',\n",
     "        ylabel='AQI',        \n",
@@ -188,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -218,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -342,7 +328,7 @@
        "4              PM2.5   01-003-0010                          1  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -480,7 +466,7 @@
        "4              PM2.5   01-003-0010                          1  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
@@ -538,7 +524,7 @@
        "       'Wisconsin', 'Wyoming'], dtype=object)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "metadata": {
     "tags": []
    },
@@ -827,7 +813,7 @@
        "[654342 rows x 10 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -921,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
@@ -1090,7 +1076,7 @@
        "[730 rows x 6 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -1130,7 +1116,7 @@
        "dtype('O')"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -1194,11 +1180,9 @@
        "      <th>defining_parameter</th>\n",
        "      <th>defining_site</th>\n",
        "      <th>number_of_sites_reporting</th>\n",
-       "      <th>five_day_average</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>date</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -1214,7 +1198,6 @@
        "      <td>Ozone</td>\n",
        "      <td>06-083-4003</td>\n",
        "      <td>12</td>\n",
-       "      <td>39.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-01-02</th>\n",
@@ -1223,7 +1206,6 @@
        "      <td>PM2.5</td>\n",
        "      <td>06-083-2011</td>\n",
        "      <td>11</td>\n",
-       "      <td>39.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-01-03</th>\n",
@@ -1232,7 +1214,6 @@
        "      <td>PM10</td>\n",
        "      <td>06-083-4003</td>\n",
        "      <td>12</td>\n",
-       "      <td>49.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-01-04</th>\n",
@@ -1241,7 +1222,6 @@
        "      <td>Ozone</td>\n",
        "      <td>06-083-4003</td>\n",
        "      <td>13</td>\n",
-       "      <td>45.750000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-01-05</th>\n",
@@ -1250,11 +1230,9 @@
        "      <td>Ozone</td>\n",
        "      <td>06-083-4003</td>\n",
        "      <td>12</td>\n",
-       "      <td>44.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1268,7 +1246,6 @@
        "      <td>Ozone</td>\n",
        "      <td>06-083-1025</td>\n",
        "      <td>11</td>\n",
-       "      <td>41.200000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-12-28</th>\n",
@@ -1277,7 +1254,6 @@
        "      <td>Ozone</td>\n",
        "      <td>06-083-1021</td>\n",
        "      <td>12</td>\n",
-       "      <td>38.600000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-12-29</th>\n",
@@ -1286,7 +1262,6 @@
        "      <td>Ozone</td>\n",
        "      <td>06-083-1021</td>\n",
        "      <td>12</td>\n",
-       "      <td>38.200000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-12-30</th>\n",
@@ -1295,7 +1270,6 @@
        "      <td>PM2.5</td>\n",
        "      <td>06-083-1008</td>\n",
        "      <td>12</td>\n",
-       "      <td>38.200000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-12-31</th>\n",
@@ -1304,11 +1278,10 @@
        "      <td>Ozone</td>\n",
        "      <td>06-083-2004</td>\n",
        "      <td>12</td>\n",
-       "      <td>38.800000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>730 rows × 6 columns</p>\n",
+       "<p>730 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1326,24 +1299,24 @@
        "2018-12-30   41      Good              PM2.5   06-083-1008   \n",
        "2018-12-31   38      Good              Ozone   06-083-2004   \n",
        "\n",
-       "            number_of_sites_reporting  five_day_average  \n",
-       "date                                                     \n",
-       "2017-01-01                         12         39.000000  \n",
-       "2017-01-02                         11         39.000000  \n",
-       "2017-01-03                         12         49.666667  \n",
-       "2017-01-04                         13         45.750000  \n",
-       "2017-01-05                         12         44.000000  \n",
-       "...                               ...               ...  \n",
-       "2018-12-27                         11         41.200000  \n",
-       "2018-12-28                         12         38.600000  \n",
-       "2018-12-29                         12         38.200000  \n",
-       "2018-12-30                         12         38.200000  \n",
-       "2018-12-31                         12         38.800000  \n",
+       "            number_of_sites_reporting  \n",
+       "date                                   \n",
+       "2017-01-01                         12  \n",
+       "2017-01-02                         11  \n",
+       "2017-01-03                         12  \n",
+       "2017-01-04                         13  \n",
+       "2017-01-05                         12  \n",
+       "...                               ...  \n",
+       "2018-12-27                         11  \n",
+       "2018-12-28                         12  \n",
+       "2018-12-29                         12  \n",
+       "2018-12-30                         12  \n",
+       "2018-12-31                         12  \n",
        "\n",
-       "[730 rows x 6 columns]"
+       "[730 rows x 5 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1376,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 24,
    "metadata": {
     "tags": []
    },
@@ -1399,7 +1372,7 @@
        "Name: aqi, Length: 730, dtype: float64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1424,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
@@ -1604,7 +1577,7 @@
        "[730 rows x 6 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1632,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -1643,7 +1616,7 @@
        "<AxesSubplot:title={'center':'Daily AQI vs. 5 Day Average in Santa Barbara County'}, xlabel='Date', ylabel='AQI'>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1659,11 +1632,8 @@
     }
    ],
    "source": [
-    "# Reset index\n",
-    "aqi_sb.reset_index(inplace = True)\n",
     "# Make a line plot\n",
-    "aqi_sb.plot(x='date', \n",
-    "        y=['aqi', 'five_day_average'],\n",
+    "aqi_sb.plot(y=['aqi', 'five_day_average'],\n",
     "        title = 'Daily AQI vs. 5 Day Average in Santa Barbara County',\n",
     "        xlabel='Date',\n",
     "        ylabel='AQI',        \n",
